--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-myconnection": "^1.0.4",
-    "nodemon": "^1.9.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "mysql": "^2.6.1",
+    "nodemon": "^1.9.1",
+    "sequelize": "^3.21.0",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
   }
